[tool.poetry]
name = "best-api"
version = "0.1.0"
description = ""
authors = ["adrixo <adrianvalrom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
