[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["adrixo <adrianvalrom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"

[tool.poetry.scripts]
hello = "api.main:hello"
api = "api.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
